changed the title and added an id to the button

--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>backgroundColor Change</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <button>Click Me</button>
-    <script src="script.js"></script>
+    <button id="btn"> Click Me</button>
+    <script src="/script/jquery-3.5.1.js"></script>
+    <script src="/script/script.js"></script>
 </body>
+
 </html>
